Add JsonInclude annotation to DTOs and refactor test methods for consistency